--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     },
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "jasmine": true
     },
     "extends": [
         "eslint:recommended",
