--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
   "homepage": "https://github.com/mugifly/angular-page-turner",
   "devDependencies": {
     "eslint": "^2.8.0",
-    "grunt": "^1.0.1",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.0",
+    "eslint-plugin-jasmine": "^1.8.1",
+    "grunt": "^1.0.1",
+    "grunt-karma": "^0.12.2",
     "grunt-npm2bower-sync": "^0.9.1",
-    "gruntify-eslint": "^2.0.0"
+    "gruntify-eslint": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
