--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mugifly/angular-page-turner",
   "devDependencies": {
+    "bower": "^1.7.9",
     "eslint": "^2.8.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.0",
@@ -38,5 +39,6 @@
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
